# cmake-lesson

./: README.md
section1/: CMakeLists.txt  main.cpp
section2/: CMakeLists.txt  main.cpp
section3/: CMakeLists.txt  config.h.in  main.cpp
section3/math/: CMakeLists.txt
section4/: CMakeLists.txt  func.cpp  func.h  main.cpp
section5/: CMakeLists.txt  main.cpp
section5/libs/: CMakeLists.txt  foo.cpp
